[tool.poetry]
name = "sqlalchemytraining"
version = "0.1.0"
description = ""
authors = ["Vladimir Shytsko <shytsko.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
psycopg-binary = "^3.2.1"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
